--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -45,7 +45,7 @@
                             <property name="fixed-width">150</property>
                             <property name="id">unit</property>
                             <property name="resizable">True</property>
-                            <property name="title">Unit</property>
+                            <property name="title" translatable="yes" context="list column">Unit</property>
                           </object>
                         </child>
                         <child>
@@ -53,7 +53,7 @@
                             <property name="fixed-width">82</property>
                             <property name="id">type</property>
                             <property name="resizable">True</property>
-                            <property name="title">Type</property>
+                            <property name="title" translatable="yes" context="list column">Type</property>
                           </object>
                         </child>
                         <child>
@@ -61,7 +61,7 @@
                             <property name="fixed-width">61</property>
                             <property name="id">bus</property>
                             <property name="resizable">True</property>
-                            <property name="title">Bus</property>
+                            <property name="title" translatable="yes" context="list column">Bus</property>
                           </object>
                         </child>
                         <child>
@@ -69,7 +69,7 @@
                             <property name="fixed-width">80</property>
                             <property name="id">state</property>
                             <property name="resizable">True</property>
-                            <property name="title">State</property>
+                            <property name="title" translatable="yes" context="list column">State</property>
                           </object>
                         </child>
                         <child>
@@ -77,7 +77,7 @@
                             <property name="fixed-width">70</property>
                             <property name="id">preset</property>
                             <property name="resizable">True</property>
-                            <property name="title">Preset</property>
+                            <property name="title" translatable="yes" context="list column">Preset</property>
                           </object>
                         </child>
                         <child>
@@ -85,7 +85,7 @@
                             <property name="fixed-width">80</property>
                             <property name="id">load</property>
                             <property name="resizable">True</property>
-                            <property name="title">Load</property>
+                            <property name="title" translatable="yes" context="list column">Load</property>
                           </object>
                         </child>
                         <child>
@@ -93,7 +93,7 @@
                             <property name="fixed-width">62</property>
                             <property name="id">active</property>
                             <property name="resizable">True</property>
-                            <property name="title">Active</property>
+                            <property name="title" translatable="yes" context="list column">Active</property>
                           </object>
                         </child>
                         <child>
@@ -101,7 +101,7 @@
                             <property name="fixed-width">71</property>
                             <property name="id">sub</property>
                             <property name="resizable">True</property>
-                            <property name="title">Sub</property>
+                            <property name="title" translatable="yes" context="list column">Sub</property>
                           </object>
                         </child>
                         <child>
@@ -109,7 +109,7 @@
                             <property name="expand">True</property>
                             <property name="id">description</property>
                             <property name="resizable">True</property>
-                            <property name="title">Description</property>
+                            <property name="title" translatable="yes" context="list column">Description</property>
                           </object>
                         </child>
                       </object>
@@ -127,14 +127,15 @@
                           <object class="GtkBox">
                             <property name="hexpand">True</property>
                             <property name="margin-start">5</property>
+                            <property name="spacing">5</property>
                             <child>
                               <object class="GtkLabel" id="loaded_units_count">
-                                <property name="tooltip-text">Loaded Units Retrieved</property>
+                                <property name="tooltip-text" translatable="yes" context="list tooltip">Loaded Units Retrieved</property>
                               </object>
                             </child>
                             <child>
                               <object class="GtkLabel" id="loaded_units_count_info">
-                                <property name="label"> Loaded Units Retrieved</property>
+                                <property name="label" translatable="yes" context="list info">Loaded Units Retrieved</property>
                               </object>
                             </child>
                           </object>
@@ -142,14 +143,15 @@
                         <child>
                           <object class="GtkBox">
                             <property name="hexpand">True</property>
+                            <property name="spacing">5</property>
                             <child>
                               <object class="GtkLabel" id="unit_files_number">
-                                <property name="tooltip-text">Unit Files Retrieved</property>
+                                <property name="tooltip-text" translatable="yes" context="list tooltip">Unit Files Retrieved</property>
                               </object>
                             </child>
                             <child>
                               <object class="GtkLabel" id="unit_files_number_info">
-                                <property name="label"> Unit Files Retrieved</property>
+                                <property name="label" translatable="yes" context="list info">Unit Files Retrieved</property>
                               </object>
                             </child>
                           </object>
@@ -157,14 +159,15 @@
                         <child>
                           <object class="GtkBox">
                             <property name="hexpand">True</property>
+                            <property name="spacing">5</property>
                             <child>
                               <object class="GtkLabel" id="unit_filtered_count">
-                                <property name="tooltip-text">Units displayed</property>
+                                <property name="tooltip-text" translatable="yes" context="list tooltip">Units displayed</property>
                               </object>
                             </child>
                             <child>
                               <object class="GtkLabel" id="unit_filtered_count_info">
-                                <property name="label"> Units Displayed</property>
+                                <property name="label" translatable="yes" context="list info">Units Displayed</property>
                               </object>
                             </child>
                           </object>
@@ -174,6 +177,7 @@
                             <property name="css-classes">circular</property>
                             <property name="halign">end</property>
                             <property name="icon-name">window-close-symbolic</property>
+                            <property name="tooltip-text" translatable="yes" context="list info tooltip">Hide bottom bar</property>
                             <signal name="clicked" handler="legend_button_clicked" swapped="yes"/>
                           </object>
                         </child>
@@ -218,9 +222,9 @@
           <object class="AdwViewStackPage">
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="description">No units returned, set environmental variable &lt;b&gt;RUST_LOG=info&lt;/b&gt; to see what happend.</property>
+                <property name="description" translatable="yes" context="list page description">No units returned, set environmental variable &lt;b&gt;RUST_LOG=info&lt;/b&gt; to see what happend.</property>
                 <property name="icon-name">sad-computer-symbolic</property>
-                <property name="title">Something went wrong</property>
+                <property name="title" translatable="yes" context="list page title">Something went wrong</property>
               </object>
             </property>
             <property name="name">error</property>
