--- a/data/interfaces/unit_info_panel.ui
+++ b/data/interfaces/unit_info_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.0 -->
+<!-- Created with Cambalache 0.96.1 -->
 <interface>
   <!-- interface-name unit_info_panel.ui -->
   <requires lib="gtk" version="4.12"/>
@@ -14,7 +14,7 @@
             <property name="child">
               <object class="AdwButtonContent">
                 <property name="icon-name">view-refresh</property>
-                <property name="label">_Refresh</property>
+                <property name="label" translatable="yes" context="unit info" comments="button">_Refresh</property>
                 <property name="use-underline">True</property>
               </object>
             </property>
@@ -26,7 +26,7 @@
             <property name="child">
               <object class="AdwButtonContent">
                 <property name="icon-name">view-app-grid-symbolic</property>
-                <property name="label" translatable="yes">Show all _Properties</property>
+                <property name="label" translatable="yes" context="unit info" comments="button">Show all _Properties</property>
                 <property name="use-underline">True</property>
               </object>
             </property>
